tests/reference/asr-iostat_non_scalar_value-7d45a6f.stderr
semantic error: `iostat` must be scalar
 --> tests/errors/iostat_non_scalar_value.f90:8:5
  |
8 |     read(u, *, iostat=ios(1:1))
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
